--- a/app/src/main/res/layout/activity_my_address.xml
+++ b/app/src/main/res/layout/activity_my_address.xml
@@ -5,26 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.huichuanyi.ui_third.My_AddressActivity">
+
     <RelativeLayout
-        android:background="@color/text_color"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@color/text_color">
+
         <include layout="@layout/btn_back"></include>
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="填写订单"
             android:textColor="#fff"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/text_size_big"
-            />
+            android:textSize="@dimen/text_size_big" />
     </RelativeLayout>
 
     <Button
         android:id="@+id/btn_test"
-        android:text="地址选择"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="地址选择" />
 
 </RelativeLayout>
