--- a/app/src/main/res/layout/activity_my_old_clothes.xml
+++ b/app/src/main/res/layout/activity_my_old_clothes.xml
@@ -1,47 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".ui_four.MySortActivity">
 
     <RelativeLayout
         android:id="@+id/tl_closet_mTools"
-        android:background="@color/top_color"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@color/top_color">
+
         <ImageView
             android:id="@+id/iv_my_sort_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
             android:layout_width="40dp"
-            />
+            android:layout_height="match_parent"
+            android:src="@drawable/back" />
+
         <TextView
             android:id="@+id/tv_feilei_zhonglei"
-            android:textColor="#fff"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="@dimen/text_size_big"
-            />
+            android:textColor="#fff"
+            android:textSize="@dimen/text_size_big" />
+
         <TextView
             android:id="@+id/tv_old_clothes_all"
-            android:text="一键还原"
-            android:textSize="@dimen/text_size_middle"
-            android:textColor="@color/write"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="@dimen/distance"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/distance"
+            android:text="一键还原"
+            android:textColor="@color/write"
+            android:textSize="@dimen/text_size_middle" />
     </RelativeLayout>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sl_my_sort_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_my_sort_pic"
             android:layout_width="match_parent"
