--- a/app/src/main/res/layout/activity_my_sorts.xml
+++ b/app/src/main/res/layout/activity_my_sorts.xml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui_four.MySortActivity">
+
     <RelativeLayout
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+
         <RelativeLayout
             android:id="@+id/tl_my_sorts_top"
-            android:background="@color/top_color"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
+            android:layout_height="40dp"
+            android:background="@color/top_color">
+
             <ImageView
                 android:id="@+id/iv_my_sorts_back"
-                android:src="@drawable/back"
-                android:layout_height="match_parent"
                 android:layout_width="40dp"
-                />
+                android:layout_height="match_parent"
+                android:src="@drawable/back" />
+
             <TextView
                 android:id="@+id/tv_feilei_zhonglei"
-                android:textColor="#fff"
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:textSize="@dimen/text_size_big"
-                />
+                android:textColor="#fff"
+                android:textSize="@dimen/text_size_big" />
 
         </RelativeLayout>
+
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/sl_my_sorts_refresh"
-            android:layout_below="@+id/tl_my_sorts_top"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tl_my_sorts_top">
+
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_my_sorts_pic"
                     android:layout_width="match_parent"
