--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_record"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.huichuanyi.ui_third.RecordActivity">
+
     <RelativeLayout
         android:id="@+id/rl_partner_clothes_top"
-        android:background="@color/top_color"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@color/top_color">
+
         <include layout="@layout/btn_back"></include>
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="@string/record_title"
             android:textColor="@color/main_color_write"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/text_size_big"
-            />
+            android:textSize="@dimen/text_size_big" />
     </RelativeLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tb_record_mTitle"
-        android:layout_gravity="center"
         android:layout_width="200dp"
         android:layout_height="40dp"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/distance"
-        app:tabSelectedTextColor="@color/write"
         app:tabBackground="@drawable/tab_background"
         app:tabIndicatorHeight="0dp"
-        >
-    </android.support.design.widget.TabLayout>
+        app:tabSelectedTextColor="@color/write"></android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_record_show"
-        android:layout_marginTop="@dimen/distance"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/distance">
 
     </android.support.v4.view.ViewPager>
 
