--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,10 @@
     <color name="primary_dark">#FF0288D1</color>
     <color name="status_bar_color">@color/primary_dark</color>
     <color name="back_ground">#cccccc</color>
+    <color name="color_6c">#cccccc</color>
     <color name="back_ground_6e">#eeeeee</color>
     <color name="text_color">#ac0000</color>
+    <color name="color_ac0000">#ac0000</color>
     <color name="top_color">#ac0000</color>
     <color name="write">#ffffff</color>
     <color name="et_999999">#999999</color>
