--- a/app/src/main/res/layout/fragment_indent_item_progress.xml
+++ b/app/src/main/res/layout/fragment_indent_item_progress.xml
@@ -1,87 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/tv_item_fragment_indent_title"
-        android:layout_marginTop="@dimen/distance_13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/distance"
         android:layout_marginLeft="@dimen/distance_20"
-        android:text="慧美微课第一段"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_marginTop="@dimen/distance_13"
+        android:text="慧美微课第一段" />
+
     <LinearLayout
-        android:weightSum="2"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
         <TextView
-            android:layout_weight="1"
-            android:background="@drawable/background2"
             android:layout_width="0dp"
-            android:layout_height="1dp" />
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/background2" />
     </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <com.example.huichuanyi.custom.RoundImageView
+
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/rv_item_fragment_indent_movie"
-            android:layout_marginBottom="@dimen/distance_33"
-            android:layout_marginTop="@dimen/distance_13"
-            android:layout_marginLeft="@dimen/distance_20"
-            android:src="@mipmap/ic_launcher"
             android:layout_width="100dp"
-            android:layout_height="66dp" />
+            android:layout_height="66dp"
+            android:layout_marginBottom="@dimen/distance_33"
+            android:layout_marginLeft="@dimen/distance_20"
+            android:layout_marginTop="@dimen/distance_13"
+            android:src="@mipmap/ic_launcher"
+            fresco:roundedCornerRadius="5dp" />
+
         <TextView
             android:id="@+id/tv_item_fragment_indent_count"
-            android:layout_marginTop="@dimen/distance_13"
-            android:text="1"
-            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <RelativeLayout
-            android:layout_marginRight="@dimen/distance"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/distance_13"
+            android:text="1" />
+
+        <RelativeLayout
             android:layout_width="90dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_height="wrap_content">
+            android:layout_marginRight="@dimen/distance"
+            android:layout_marginTop="@dimen/distance_13">
+
             <TextView
                 android:id="@+id/tv_item_fragment_indent_price"
-                android:layout_centerHorizontal="true"
-                android:text="价格"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="价格" />
+
             <TextView
-                android:layout_marginTop="@dimen/distance_13"
                 android:id="@+id/tv_item_fragment_indent_total"
-                android:layout_below="@+id/tv_item_fragment_indent_price"
-                android:text="总计"
-                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_item_fragment_indent_price"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/distance_13"
+                android:text="总计" />
+
             <ImageView
                 android:id="@+id/iv_item_fragment_indent_go_pay"
-                android:layout_marginTop="@dimen/distance"
-                android:layout_below="@+id/tv_item_fragment_indent_total"
-                android:src="@mipmap/quzhifu"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_item_fragment_indent_total"
+                android:layout_marginTop="@dimen/distance"
+                android:src="@mipmap/quzhifu"
+                android:visibility="gone" />
+
             <ImageView
                 android:id="@+id/iv_item_fragment_indent_go_look"
-                android:layout_marginTop="@dimen/distance"
-                android:layout_below="@+id/tv_item_fragment_indent_total"
-                android:src="@mipmap/go_look"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_item_fragment_indent_total"
+                android:layout_marginTop="@dimen/distance"
+                android:src="@mipmap/go_look"
+                android:visibility="gone" />
 
         </RelativeLayout>
     </RelativeLayout>
+
     <TextView
-        android:background="@drawable/background2"
         android:layout_width="match_parent"
-        android:layout_height="1dp" />
+        android:layout_height="1dp"
+        android:background="@drawable/background2" />
 
 </LinearLayout>
