--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/tl_mine_show"
@@ -31,13 +32,13 @@
             android:scaleType="fitXY"
             android:src="@mipmap/beijing" />
 
-        <com.example.huichuanyi.custom.CircleImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_mine_photo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="7dp"
-            android:src="@mipmap/managephoto" />
+            android:layout_marginTop="@dimen/distance_10"
+            fresco:roundAsCircle="true" />
 
         <ImageView
             android:id="@+id/iv_mine_setting"
