修改了头像使用fresco修改了头像适配问题

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -34,10 +34,12 @@
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_mine_photo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/distance_10"
+            fresco:placeholderImage="@mipmap/managephoto"
+            fresco:placeholderImageScaleType="fitCenter"
             fresco:roundAsCircle="true" />
 
         <ImageView
